--- a/src/main/resources/assets/darkness/lang/en_US.lang
+++ b/src/main/resources/assets/darkness/lang/en_US.lang
@@ -1,5 +1,16 @@
-tile.block_test.name=Test Block
-
 itemGroup.darkness=Darkness
 
+tile.block_test.name=Test Block
+
+
+
+
 item.item_test.name=Test Item
+
+item.ingot_ness.name=Ness Ingot
+
+item.sword_ness.name=Ness Sword
+item.shovel_ness.name=Ness Shovel
+item.pickaxe_ness.name=Ness Pickaxe
+item.axe_ness.name=Ness Axe
+item.hoe_ness.name=Ness Hoe
