--- a/src/main/resources/assets/darkness/lang/en_US.lang
+++ b/src/main/resources/assets/darkness/lang/en_US.lang
@@ -3,8 +3,7 @@ itemGroup.darkness=Darkness
 tile.block_test.name=Test Block
 
 
-
-
+//Items
 item.ingot_darkrunic.name=Dark Runic Ingot
 
 item.sword_darkrunic.name=Dark Runic Sword
