Revamped Recipes, put in place measures if materials become overwhelming
Added Bauble Dependency with Base Bauble Item

Added Dark Compendium (Guide to Mod) via GuideAPI

Added a Base BlockSlab class

--- a/src/main/resources/assets/darkness/lang/en_US.lang
+++ b/src/main/resources/assets/darkness/lang/en_US.lang
@@ -11,6 +11,7 @@ tile.null.name=Null Fluid
 
 //Items
 item.compendium.name=The Dark Compendium
+item.guidebook.name=The Dark Compendium
 item.scroll_bag.name=Scroll Bag
 item.book_binding.name=Book Binding
 item.darkened_string.name=Darkened String
